@@ -70,9 +70,6 @@
             <property name="text">
              <string>&amp;Yet to learn</string>
             </property>
-            <property name="shortcut">
-             <string>Ctrl+Return</string>
-            </property>
             <property name="autoDefault">
              <bool>true</bool>
             </property>
@@ -91,7 +88,7 @@
           <item>
            <widget class="QPushButton" name="grade_2_button">
             <property name="text">
-             <string>2</string>
+             <string>&amp;2</string>
             </property>
             <property name="shortcut">
              <string>Ctrl+2</string>
@@ -104,7 +101,7 @@
           <item>
            <widget class="QPushButton" name="grade_3_button">
             <property name="text">
-             <string>3</string>
+             <string>&amp;3</string>
             </property>
             <property name="shortcut">
              <string>Ctrl+3</string>
@@ -117,7 +114,7 @@
           <item>
            <widget class="QPushButton" name="grade_4_button">
             <property name="text">
-             <string>4</string>
+             <string>&amp;4</string>
             </property>
             <property name="shortcut">
              <string>Ctrl+4</string>
@@ -130,7 +127,7 @@
           <item>
            <widget class="QPushButton" name="grade_5_button">
             <property name="text">
-             <string>5</string>
+             <string>&amp;5</string>
             </property>
             <property name="shortcut">
              <string>Ctrl+5</string>
@@ -151,6 +148,9 @@
         <widget class="QPushButton" name="preview_button">
          <property name="text">
           <string>&amp;Preview</string>
+         </property>
+         <property name="shortcut">
+          <string>Ctrl+P</string>
          </property>
          <property name="autoDefault">
           <bool>false</bool>
@@ -173,7 +173,10 @@
        <item>
         <widget class="QPushButton" name="exit_button">
          <property name="text">
-          <string>E&amp;xit</string>
+          <string>&amp;Exit</string>
+         </property>
+         <property name="shortcut">
+          <string>Ctrl+E</string>
          </property>
          <property name="autoDefault">
           <bool>false</bool>
